--- a/Cozy_Cuisine/Views/Shared/Admin_Layout.cshtml
+++ b/Cozy_Cuisine/Views/Shared/Admin_Layout.cshtml
@@ -110,12 +110,18 @@
                         <span class="pgname">Wiki</span>
                     </div>
                 </a>
-               @*  <a href="#" class="text-decoration-none">
+                <a asp-action="GameplayManagement" asp-controller="Wiki" class="text-decoration-none">
                     <div class="abtn container-fluid p-3">
-                        <span><i class="i-sec fa-solid fa-gamepad fa-xl" style="color: #603f26;"></i></span>
-                        <span class="pgname">Game Development</span>
+                        <span><i class="i-sec fa-solid fa-puzzle-piece fa-xl" style="color: #603f26;"></i></span>
+                        <span class="pgname">Gameplay</span>
                     </div>
-                </a> *@
+                </a>
+                <a asp-action="GameItemsManagement" asp-controller="Wiki" class="text-decoration-none">
+                    <div class="abtn container-fluid p-3">
+                        <span><i class="i-sec fa-solid fa-drumstick-bite fa-xl" style="color: #603f26;"></i></span>
+                        <span class="pgname">Game Items</span>
+                    </div>
+                </a>
                 <a asp-action="CharacterManagement" asp-controller="Wiki" class="text-decoration-none">
                     <div class="abtn container-fluid p-3">
                         <span><i class="i-sec fa-solid fa-masks-theater fa-xl" style="color: #603f26;"></i></span>
