--- a/Cozy_Cuisine/Views/Home/About.cshtml
+++ b/Cozy_Cuisine/Views/Home/About.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Cozy_Cuisine.ViewModels.AboutPageVM
+
+@{
     ViewData["Title"] = "About";
 }
 
@@ -10,13 +12,16 @@
                 ABOUT
             </div>
             <div class="abtdescrip fs-3">
+                @Model.LatestAbout.Description
+            </div>
+            @*<div class="abtdescrip fs-3">
                 Welcome to Cozy Cuisine, a cozy kiosk
                 crafting game where you gather ingredients
                 and auto-craft meals then ready to serve.
                 Run by Elena, a former corporate worker
                 turned entrepreneur, it's a game about
                 second chances, community, and good food.
-            </div>
+            </div> *@
         </div>
         <img src="~/img/frontdoor.png" alt="Alternate Text"  class="abtpic img-fluid"/>
     </div>
@@ -48,6 +53,68 @@
     </div>
 </div>
 
+
+<div class="cont3 container-fluid my-5">
+    <div class="container p-5">
+        <div class="sectitle display-4 mb-3">
+            GAMEPLAY
+        </div>
+        <div class="d-flex align-items-start">
+            <div class="gameplaytab fs-3 nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                @foreach (var mechanic in Model.GameMechanics)
+                {
+                    <button class="nav-link @(mechanic.GameMechId == Model.GameMechanics.First().GameMechId ? "active" : "")" id="@mechanic.GMName.ToLower()" data-bs-toggle="pill" data-bs-target="#v-pills-@mechanic.GameMechId" type="button" role="tab" aria-controls="v-pills-@mechanic.GameMechId" aria-selected="true">
+                        @mechanic.GMName
+                    </button>
+                }
+            </div>
+            <div class="gptabcontent tab-content p-5" id="v-pills-tabContent">
+                @foreach (var mechanic in Model.GameMechanics)
+                {
+                    <div class="tab-pane fade @(mechanic.GameMechId == Model.GameMechanics.First().GameMechId ? "show active" : "")" id="v-pills-@mechanic.GameMechId" role="tabpanel" aria-labelledby="v-pills-@mechanic.GameMechId-tab" tabindex="0">
+                        <div class="gppiccont container text-center w-100 p-3">
+                            @{
+                                var fileId = "";
+                                var parts = mechanic.URLImageList?.Split('/');
+                                if (parts != null && parts.Length >= 6)
+                                {
+                                    fileId = parts[5];
+                                }
+
+                                var previewUrl = $"https://drive.google.com/file/d/{fileId}/preview";
+                            }
+
+                            @if (!string.IsNullOrEmpty(fileId))
+                            {
+                                <iframe src="@previewUrl" width="100%" height="400" style="border: none;" allowfullscreen></iframe>
+                            }
+                            else
+                            {
+                                <span>No Image Available</span>
+                            }
+                        </div>
+
+                        <div class="mt-3">
+                            <div class="gpoink row">
+                                <div class="col-lg-7 gptxt fs-3">
+                                    @mechanic.Description
+                                </div>
+                                <div class="col-lg-4 text-end mt-2">
+                                    <button class="learnmorebtn btn p-3">
+                                        LEARN MORE
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@* 
 <div class="cont3 container-fluid my-5">
     <div class="container p-5">
         <div class="sectitle display-4 mb-3">
@@ -170,4 +237,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
