--- a/Cozy_Cuisine/Views/Manage/NewsManagement.cshtml
+++ b/Cozy_Cuisine/Views/Manage/NewsManagement.cshtml
@@ -77,13 +77,22 @@
                     <td>
                         @if (!string.IsNullOrEmpty(notice.URLNewsImageList))
                         {
-
                             var imageUrls = notice.URLNewsImageList.Split(',');
                             foreach (var url in imageUrls)
                             {
-                                <a href="@url" target="_blank">
-                                    <img src="@url" alt="@url" style="width: 100px; height: auto; margin-right: 5px;" />
-                                </a>
+                                // Extract File ID from Google Drive URL
+                                var fileId = "";
+                                var parts = url.Split('/');
+                                if (parts.Length >= 6)
+                                {
+                                    fileId = parts[5];
+                                }
+
+                                if (!string.IsNullOrEmpty(fileId))
+                                {
+                                    var previewUrl = $"https://drive.google.com/file/d/{fileId}/preview";
+                                    <iframe src="@previewUrl" width="300" height="200" style="margin-right: 10px; border: none;"></iframe>
+                                }
                             }
                         }
                         else
@@ -92,8 +101,45 @@
                         }
                     </td>
                     <td>
-                        <a href="@notice.URLVideo" alt="Video">@notice.URLVideo</a>
+                        @{
+                            var videoUrl = notice.URLVideo;
+                            var videoId = "";
+                            var embedUrl = "";
+
+                            if (!string.IsNullOrEmpty(videoUrl))
+                            {
+                                if (videoUrl.Contains("watch?v="))
+                                {
+                                    var parts = videoUrl.Split("watch?v=");
+                                    videoId = parts.Length > 1 ? parts[1] : "";
+                                }
+                                else if (videoUrl.Contains("youtu.be/"))
+                                {
+                                    var parts = videoUrl.Split("youtu.be/");
+                                    videoId = parts.Length > 1 ? parts[1] : "";
+                                }
+
+                                if (!string.IsNullOrEmpty(videoId))
+                                {
+                                    embedUrl = $"https://www.youtube.com/embed/{videoId}";
+                                }
+                            }
+                        }
+
+                        @if (!string.IsNullOrEmpty(embedUrl))
+                        {
+                            <iframe width="300" height="170" src="@embedUrl" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen>
+                            </iframe>
+                        }
+                        else
+                        {
+                            <span>Invalid or unsupported video URL.</span>
+                        }
                     </td>
+
+
                     <td>
                         <a asp-action="DetailsNotice" asp-route-id="@notice.NoticeId" class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i>View</a>
 
